--- a/Front-end/Hotels/hotels/src/Components/Css/ShowHotels.css
+++ b/Front-end/Hotels/hotels/src/Components/Css/ShowHotels.css
@@ -9,3 +9,34 @@
     justify-content: space-between;
 }
 
+.teal_p{
+    background-color: #efefef;
+    height: 30px;
+}.right_p{
+    float: right;
+}
+.filter_p{
+    border: 1px solid lightslategray;
+    text-align: left !important;
+    width: 150%;
+}
+.filter_p_h3{
+   
+    text-align: center !important;
+    margin: 1%;
+    margin-bottom: 0%;
+}
+.filter_p_button{
+    align-self: center;
+    margin:5% 30% !important;
+}
+
+input[type="checkbox" ] {
+    background-color: initial;
+    cursor: default;
+    
+    box-sizing: border-box;
+    color: lightslategray !important;
+    padding: initial;
+    border: initial;
+}
