--- a/Front-end/Hotels/hotels/src/Components/Css/Payment.css
+++ b/Front-end/Hotels/hotels/src/Components/Css/Payment.css
@@ -55,3 +55,13 @@
     width: 100%;
     height: 100%;
 }
+.lable_pay_p{
+    margin-top: 2%;
+   width:  75%;
+    margin-right: 0%;
+}
+.coupon_inp_p{
+    width: 100px;
+    margin: 0%;
+    height: 30px;
+}
