--- a/Front-end/Hotels/hotels/src/Components/Css/SearchArea.css
+++ b/Front-end/Hotels/hotels/src/Components/Css/SearchArea.css
@@ -169,7 +169,7 @@ ul{
     padding: 0;
     height: 15px;
 }
-button{
+.button_p{
     background-color: #c60001;
     color: white;
     border: none;
