--- a/Front-end/landing-page/src/components/Trains/importantlinks/links.css
+++ b/Front-end/landing-page/src/components/Trains/importantlinks/links.css
@@ -1,20 +1,21 @@
-.padding-left-s{
-    padding:0px 120px;
+.padding-left-s {
+  padding: 0px 120px;
 }
-.linkers-s{
-    display: grid;
-    grid-template-columns: 35% 64%;
-    grid-gap: 13px;
-   
+.linkers-s {
+  display: grid;
+  grid-template-columns: 35% 64%;
+  grid-gap: 13px;
 }
-.linkers-grid-s{
-    display: grid;
-    grid-template-columns:48% 48%;
-    grid-gap: 2%;
-    
+.linkers-grid-s {
+  display: grid;
+  grid-template-columns: 48% 48%;
+  grid-gap: 2%;
 }
-.linkers-grid-s>div{
-    border: 1px solid rgb(219, 219, 219);
-    padding:12px;
-    cursor: pointer;
+.linkers-grid-s > div {
+  border: 1px solid rgb(219, 219, 219);
+  padding: 12px;
+  cursor: pointer;
+}
+img {
+  width: 20%;
 }
